--- a/.coveragerc
+++ b/.coveragerc
@@ -938,6 +938,9 @@ omit =
     homeassistant/components/panasonic_viera/media_player.py
     homeassistant/components/pandora/media_player.py
     homeassistant/components/pencom/switch.py
+    homeassistant/components/philips_air_purifier/__init__.py
+    homeassistant/components/philips_air_purifier/client.py
+    homeassistant/components/philips_air_purifier/fan.py
     homeassistant/components/philips_js/__init__.py
     homeassistant/components/philips_js/diagnostics.py
     homeassistant/components/philips_js/light.py
