--- a/homeassistant/components/tplink/services.yaml
+++ b/homeassistant/components/tplink/services.yaml
@@ -93,7 +93,7 @@ random_effect:
         - [199, 89, 50]
         - [160, 50, 50]
         - [180, 100, 50]
-      required: true
+      required: false
       selector:
         object:
     segments:
