--- a/homeassistant/components/qr_generator/manifest.json
+++ b/homeassistant/components/qr_generator/manifest.json
@@ -3,14 +3,9 @@
   "name": "QR Code Generator",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/qr_generator",
-  "requirements": [
-    "pyqrcode==1.2.1",
-    "pypng==0.0.21"
-  ],
+  "requirements": ["pyqrcode==1.2.1", "pypng==0.0.21"],
   "dependencies": [],
-  "codeowners": [
-    "@DeerMaximum"
-  ],
+  "codeowners": ["@DeerMaximum"],
   "iot_class": "calculated",
   "loggers": ["qr_generator"]
 }
