--- a/mypy.ini
+++ b/mypy.ini
@@ -495,6 +495,17 @@ no_implicit_optional = true
 warn_return_any = true
 warn_unreachable = true
 
+[mypy-homeassistant.components.deconz.alarm_control_panel]
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unreachable = true
+
 [mypy-homeassistant.components.deconz.config_flow]
 check_untyped_defs = true
 disallow_incomplete_defs = true
@@ -2585,9 +2596,6 @@ ignore_errors = true
 ignore_errors = true
 
 [mypy-homeassistant.components.conversation.default_agent]
-ignore_errors = true
-
-[mypy-homeassistant.components.deconz.alarm_control_panel]
 ignore_errors = true
 
 [mypy-homeassistant.components.deconz.binary_sensor]
