--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -91,6 +91,7 @@ build.json @home-assistant/supervisor
 /homeassistant/components/atag/ @MatsNL
 /tests/components/atag/ @MatsNL
 /homeassistant/components/aten_pe/ @mtdcr
+/tests/components/aten_pe/ @mtdcr
 /homeassistant/components/atome/ @baqs
 /homeassistant/components/august/ @bdraco
 /tests/components/august/ @bdraco
