--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -35,8 +35,10 @@ PySocks==1.7.1
 # homeassistant.components.transport_nsw
 PyTransportNSW==0.1.1
 
-# homeassistant.components.camera
 # homeassistant.components.stream
+PyTurboJPEG==1.6.5
+
+# homeassistant.components.camera
 PyTurboJPEG==1.6.6
 
 # homeassistant.components.vicare
@@ -277,8 +279,10 @@ auroranoaa==0.0.2
 # homeassistant.components.aurora_abb_powerone
 aurorapy==0.2.6
 
-# homeassistant.components.generic
 # homeassistant.components.stream
+av==8.1.0
+
+# homeassistant.components.generic
 av==9.0.0
 
 # homeassistant.components.axis
