--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1823,7 +1823,7 @@ pysmarty==0.8
 pysml==0.0.7
 
 # homeassistant.components.snmp
-pysnmp==4.4.12
+pysnmplib==5.0.10
 
 # homeassistant.components.soma
 pysoma==0.0.10
