--- a/homeassistant/components/command_line/manifest.json
+++ b/homeassistant/components/command_line/manifest.json
@@ -2,6 +2,7 @@
   "domain": "command_line",
   "name": "Command Line",
   "documentation": "https://www.home-assistant.io/integrations/command_line",
+  "dependencies": ["template"],
   "codeowners": [],
   "iot_class": "local_polling"
 }
