--- a/homeassistant/components/yalexs_ble/manifest.json
+++ b/homeassistant/components/yalexs_ble/manifest.json
@@ -6,7 +6,12 @@
   "requirements": ["yalexs-ble==1.8.1"],
   "dependencies": ["bluetooth"],
   "codeowners": ["@bdraco"],
-  "bluetooth": [{ "manufacturer_id": 465 }],
+  "bluetooth": [
+    {
+      "manufacturer_id": 465,
+      "service_uuid": "0000fe24-0000-1000-8000-00805f9b34fb"
+    }
+  ],
   "iot_class": "local_push",
   "supported_brands": {
     "august_ble": "August Bluetooth"
