--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -329,7 +329,10 @@ bellows==0.33.1
 bimmer_connected==0.10.2
 
 # homeassistant.components.bluetooth
-bleak==0.16.0
+bleak-retry-connector==1.15.0
+
+# homeassistant.components.bluetooth
+bleak==0.17.0
 
 # homeassistant.components.blebox
 blebox_uniapi==2.0.2
@@ -412,7 +415,7 @@ datadog==0.15.0
 datapoint==0.9.8
 
 # homeassistant.components.bluetooth
-dbus_next==0.2.3
+dbus-fast==1.4.0
 
 # homeassistant.components.debugpy
 debugpy==1.6.3
