--- a/homeassistant/components/bluetooth/manifest.json
+++ b/homeassistant/components/bluetooth/manifest.json
@@ -5,10 +5,11 @@
   "dependencies": ["usb"],
   "quality_scale": "internal",
   "requirements": [
-    "bleak==0.16.0",
+    "bleak==0.17.0",
+    "bleak-retry-connector==1.15.0",
     "bluetooth-adapters==0.4.1",
     "bluetooth-auto-recovery==0.3.3",
-    "dbus_next==0.2.3"
+    "dbus-fast==1.4.0"
   ],
   "codeowners": ["@bdraco"],
   "config_flow": true,
