--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1908,6 +1908,9 @@ pystiebeleltron==0.0.1.dev2
 # homeassistant.components.suez_water
 pysuez==0.1.19
 
+# homeassistant.components.switchbee
+pyswitchbee==1.4.7
+
 # homeassistant.components.syncthru
 pysyncthru==0.7.10
 
