--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1334,6 +1334,9 @@ pyspcwebgw==0.4.0
 # homeassistant.components.squeezebox
 pysqueezebox==0.6.0
 
+# homeassistant.components.switchbee
+pyswitchbee==1.4.7
+
 # homeassistant.components.syncthru
 pysyncthru==0.7.10
 
