--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -408,7 +408,10 @@ bimmer_connected==0.10.2
 bizkaibus==0.1.1
 
 # homeassistant.components.bluetooth
-bleak==0.16.0
+bleak-retry-connector==1.15.1
+
+# homeassistant.components.bluetooth
+bleak==0.17.0
 
 # homeassistant.components.blebox
 blebox_uniapi==2.0.2
@@ -535,7 +538,7 @@ datadog==0.15.0
 datapoint==0.9.8
 
 # homeassistant.components.bluetooth
-dbus_next==0.2.3
+dbus-fast==1.4.0
 
 # homeassistant.components.debugpy
 debugpy==1.6.3
