--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -43,7 +43,7 @@ PyTransportNSW==0.1.1
 PyTurboJPEG==1.6.7
 
 # homeassistant.components.vicare
-PyViCare==2.16.2
+PyViCare==2.17.0
 
 # homeassistant.components.xiaomi_aqara
 PyXiaomiGateway==0.13.4
@@ -121,7 +121,7 @@ aiobafi6==0.7.2
 aiobotocore==2.1.0
 
 # homeassistant.components.dhcp
-aiodiscover==1.4.11
+aiodiscover==1.4.13
 
 # homeassistant.components.dnsip
 # homeassistant.components.minecraft_server
@@ -201,7 +201,7 @@ aioopenexchangerates==0.4.0
 aiopulse==0.4.3
 
 # homeassistant.components.hunterdouglas_powerview
-aiopvapi==2.0.0
+aiopvapi==2.0.1
 
 # homeassistant.components.pvpc_hourly_pricing
 aiopvpc==3.0.0
@@ -329,7 +329,10 @@ bellows==0.33.1
 bimmer_connected==0.10.2
 
 # homeassistant.components.bluetooth
-bleak==0.16.0
+bleak-retry-connector==1.15.1
+
+# homeassistant.components.bluetooth
+bleak==0.17.0
 
 # homeassistant.components.blebox
 blebox_uniapi==2.0.2
@@ -341,10 +344,10 @@ blinkpy==0.19.2
 bluemaestro-ble==0.2.0
 
 # homeassistant.components.bluetooth
-bluetooth-adapters==0.3.4
+bluetooth-adapters==0.4.1
 
 # homeassistant.components.bluetooth
-bluetooth-auto-recovery==0.3.1
+bluetooth-auto-recovery==0.3.3
 
 # homeassistant.components.bond
 bond-async==0.1.22
@@ -365,7 +368,7 @@ brunt==1.2.0
 bsblan==0.5.0
 
 # homeassistant.components.bthome
-bthome-ble==1.0.0
+bthome-ble==1.2.0
 
 # homeassistant.components.buienradar
 buienradar==1.0.5
@@ -410,6 +413,9 @@ datadog==0.15.0
 
 # homeassistant.components.metoffice
 datapoint==0.9.8
+
+# homeassistant.components.bluetooth
+dbus-fast==1.4.0
 
 # homeassistant.components.debugpy
 debugpy==1.6.3
@@ -477,7 +483,7 @@ envoy_reader==0.20.1
 ephem==4.1.2
 
 # homeassistant.components.epson
-epson-projector==0.4.6
+epson-projector==0.5.0
 
 # homeassistant.components.faa_delays
 faadelays==0.0.7
@@ -757,10 +763,10 @@ mficlient==0.3.0
 micloud==0.5
 
 # homeassistant.components.mill
-mill-local==0.1.1
+mill-local==0.2.0
 
 # homeassistant.components.mill
-millheater==0.9.0
+millheater==0.10.0
 
 # homeassistant.components.minio
 minio==5.0.10
@@ -980,7 +986,7 @@ pyMetno==0.9.0
 pyRFXtrx==0.30.0
 
 # homeassistant.components.tibber
-pyTibber==0.24.0
+pyTibber==0.25.2
 
 # homeassistant.components.nextbus
 py_nextbusnext==0.1.5
@@ -1056,9 +1062,6 @@ pyefergy==22.1.1
 
 # homeassistant.components.eight_sleep
 pyeight==0.3.0
-
-# homeassistant.components.electrasmart
-pyelectra==1.0.5
 
 # homeassistant.components.everlights
 pyeverlights==0.1.0
@@ -1169,7 +1172,7 @@ pylibrespot-java==0.1.0
 pylitejet==0.3.0
 
 # homeassistant.components.litterrobot
-pylitterbot==2022.8.2
+pylitterbot==2022.9.1
 
 # homeassistant.components.lutron_caseta
 pylutron-caseta==0.15.1
@@ -1291,7 +1294,7 @@ pyruckus==0.16
 pysabnzbd==1.1.1
 
 # homeassistant.components.sensibo
-pysensibo==1.0.19
+pysensibo==1.0.20
 
 # homeassistant.components.serial
 # homeassistant.components.zha
@@ -1333,6 +1336,9 @@ pyspcwebgw==0.4.0
 
 # homeassistant.components.squeezebox
 pysqueezebox==0.6.0
+
+# homeassistant.components.switchbee
+pyswitchbee==1.4.7
 
 # homeassistant.components.syncthru
 pysyncthru==0.7.10
@@ -1457,7 +1463,7 @@ radios==0.1.1
 radiotherm==2.1.0
 
 # homeassistant.components.rainmachine
-regenmaschine==2022.08.0
+regenmaschine==2022.09.1
 
 # homeassistant.components.renault
 renault-api==0.1.11
@@ -1545,7 +1551,7 @@ soco==0.28.0
 solaredge==0.0.2
 
 # homeassistant.components.solax
-solax==0.2.9
+solax==0.3.0
 
 # homeassistant.components.honeywell
 somecomfort==0.8.0
@@ -1597,7 +1603,7 @@ subarulink==0.5.0
 sunwatcher==0.2.1
 
 # homeassistant.components.surepetcare
-surepy==0.7.2
+surepy==0.8.0
 
 # homeassistant.components.system_bridge
 systembridgeconnector==3.4.4
@@ -1622,6 +1628,9 @@ thermobeacon-ble==0.3.1
 
 # homeassistant.components.thermopro
 thermopro-ble==0.4.3
+
+# homeassistant.components.tilt_ble
+tilt-ble==0.2.3
 
 # homeassistant.components.todoist
 todoist-python==8.0.0
@@ -1683,7 +1692,7 @@ vallox-websocket-api==2.12.0
 vehicle==0.4.0
 
 # homeassistant.components.velbus
-velbus-aio==2022.6.2
+velbus-aio==2022.9.1
 
 # homeassistant.components.venstar
 venstarcolortouch==0.18
@@ -1773,7 +1782,7 @@ zeroconf==0.39.1
 zha-quirks==0.0.79
 
 # homeassistant.components.zha
-zigpy-deconz==0.18.0
+zigpy-deconz==0.18.1
 
 # homeassistant.components.zha
 zigpy-xbee==0.15.0
@@ -1785,10 +1794,10 @@ zigpy-zigate==0.9.2
 zigpy-znp==0.8.2
 
 # homeassistant.components.zha
-zigpy==0.50.2
+zigpy==0.50.3
 
 # homeassistant.components.zwave_js
-zwave-js-server-python==0.41.0
+zwave-js-server-python==0.41.1
 
 # homeassistant.components.zwave_me
 zwave_me_ws==0.2.4
