--- a/mypy.ini
+++ b/mypy.ini
@@ -63,6 +63,9 @@ disallow_any_generics = true
 [mypy-homeassistant.helpers.deprecation]
 disallow_any_generics = true
 
+[mypy-homeassistant.helpers.device_registry]
+disallow_any_generics = true
+
 [mypy-homeassistant.helpers.discovery]
 disallow_any_generics = true
 
