--- a/homeassistant/components/netatmo/manifest.json
+++ b/homeassistant/components/netatmo/manifest.json
@@ -2,31 +2,14 @@
   "domain": "netatmo",
   "name": "Netatmo",
   "documentation": "https://www.home-assistant.io/integrations/netatmo",
-  "requirements": [
-    "pyatmo==7.0.1"
-  ],
-  "after_dependencies": [
-    "cloud",
-    "media_source"
-  ],
-  "dependencies": [
-    "application_credentials",
-    "webhook"
-  ],
-  "codeowners": [
-    "@cgtobi"
-  ],
+  "requirements": ["pyatmo==7.0.1"],
+  "after_dependencies": ["cloud", "media_source"],
+  "dependencies": ["application_credentials", "webhook"],
+  "codeowners": ["@cgtobi"],
   "config_flow": true,
   "homekit": {
-    "models": [
-      "Healty Home Coach",
-      "Netatmo Relay",
-      "Presence",
-      "Welcome"
-    ]
+    "models": ["Healty Home Coach", "Netatmo Relay", "Presence", "Welcome"]
   },
   "iot_class": "cloud_polling",
-  "loggers": [
-    "pyatmo"
-  ]
+  "loggers": ["pyatmo"]
 }
