--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1132,6 +1132,9 @@ nextcord==2.0.0a8
 # homeassistant.components.nextdns
 nextdns==1.1.1
 
+# homeassistant.components.nibe_heatpump
+nibe==0.4.0
+
 # homeassistant.components.niko_home_control
 niko-home-control==0.2.1
 
