--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -956,6 +956,9 @@ kaiterra-async-client==1.0.0
 # homeassistant.components.keba
 keba-kecontact==1.1.0
 
+# homeassistant.components.kegtron
+kegtron-ble==0.1.1
+
 # homeassistant.components.kiwi
 kiwiki-client==0.1.1
 
