--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -813,6 +813,9 @@ nextcord==2.0.0a8
 # homeassistant.components.nextdns
 nextdns==1.1.1
 
+# homeassistant.components.nibe_heatpump
+nibe==0.4.0
+
 # homeassistant.components.nfandroidtv
 notifications-android-tv==0.1.5
 
