--- a/.coveragerc
+++ b/.coveragerc
@@ -1110,6 +1110,7 @@ omit =
     homeassistant/components/simplisafe/__init__.py
     homeassistant/components/simplisafe/alarm_control_panel.py
     homeassistant/components/simplisafe/binary_sensor.py
+    homeassistant/components/simplisafe/button.py
     homeassistant/components/simplisafe/lock.py
     homeassistant/components/simplisafe/sensor.py
     homeassistant/components/simulated/sensor.py
