--- a/homeassistant/components/light/services.yaml
+++ b/homeassistant/components/light/services.yaml
@@ -8,7 +8,7 @@ turn_on:
   target:
     entity:
       domain: light
-  fields:
+  fields: &turn-on-fields
     transition:
       name: Transition
       description: Duration it takes to get to next state.
@@ -329,248 +329,13 @@ toggle:
   target:
     entity:
       domain: light
-  fields:
-    transition:
-      name: Transition
-      description: Duration it takes to get to next state.
-      selector:
-        number:
-          min: 0
-          max: 300
-          unit_of_measurement: seconds
-    rgb_color:
-      name: RGB-color
-      description: Color for the light in RGB-format.
-      advanced: true
-      example: "[255, 100, 100]"
-      selector:
-        object:
-    color_name:
-      name: Color name
-      description: A human readable color name.
-      advanced: true
-      selector:
-        select:
-          options:
-            - "homeassistant"
-            - "aliceblue"
-            - "antiquewhite"
-            - "aqua"
-            - "aquamarine"
-            - "azure"
-            - "beige"
-            - "bisque"
-            # Black is omitted from this list as nonsensical for lights
-            - "blanchedalmond"
-            - "blue"
-            - "blueviolet"
-            - "brown"
-            - "burlywood"
-            - "cadetblue"
-            - "chartreuse"
-            - "chocolate"
-            - "coral"
-            - "cornflowerblue"
-            - "cornsilk"
-            - "crimson"
-            - "cyan"
-            - "darkblue"
-            - "darkcyan"
-            - "darkgoldenrod"
-            - "darkgray"
-            - "darkgreen"
-            - "darkgrey"
-            - "darkkhaki"
-            - "darkmagenta"
-            - "darkolivegreen"
-            - "darkorange"
-            - "darkorchid"
-            - "darkred"
-            - "darksalmon"
-            - "darkseagreen"
-            - "darkslateblue"
-            - "darkslategray"
-            - "darkslategrey"
-            - "darkturquoise"
-            - "darkviolet"
-            - "deeppink"
-            - "deepskyblue"
-            - "dimgray"
-            - "dimgrey"
-            - "dodgerblue"
-            - "firebrick"
-            - "floralwhite"
-            - "forestgreen"
-            - "fuchsia"
-            - "gainsboro"
-            - "ghostwhite"
-            - "gold"
-            - "goldenrod"
-            - "gray"
-            - "green"
-            - "greenyellow"
-            - "grey"
-            - "honeydew"
-            - "hotpink"
-            - "indianred"
-            - "indigo"
-            - "ivory"
-            - "khaki"
-            - "lavender"
-            - "lavenderblush"
-            - "lawngreen"
-            - "lemonchiffon"
-            - "lightblue"
-            - "lightcoral"
-            - "lightcyan"
-            - "lightgoldenrodyellow"
-            - "lightgray"
-            - "lightgreen"
-            - "lightgrey"
-            - "lightpink"
-            - "lightsalmon"
-            - "lightseagreen"
-            - "lightskyblue"
-            - "lightslategray"
-            - "lightslategrey"
-            - "lightsteelblue"
-            - "lightyellow"
-            - "lime"
-            - "limegreen"
-            - "linen"
-            - "magenta"
-            - "maroon"
-            - "mediumaquamarine"
-            - "mediumblue"
-            - "mediumorchid"
-            - "mediumpurple"
-            - "mediumseagreen"
-            - "mediumslateblue"
-            - "mediumspringgreen"
-            - "mediumturquoise"
-            - "mediumvioletred"
-            - "midnightblue"
-            - "mintcream"
-            - "mistyrose"
-            - "moccasin"
-            - "navajowhite"
-            - "navy"
-            - "navyblue"
-            - "oldlace"
-            - "olive"
-            - "olivedrab"
-            - "orange"
-            - "orangered"
-            - "orchid"
-            - "palegoldenrod"
-            - "palegreen"
-            - "paleturquoise"
-            - "palevioletred"
-            - "papayawhip"
-            - "peachpuff"
-            - "peru"
-            - "pink"
-            - "plum"
-            - "powderblue"
-            - "purple"
-            - "red"
-            - "rosybrown"
-            - "royalblue"
-            - "saddlebrown"
-            - "salmon"
-            - "sandybrown"
-            - "seagreen"
-            - "seashell"
-            - "sienna"
-            - "silver"
-            - "skyblue"
-            - "slateblue"
-            - "slategray"
-            - "slategrey"
-            - "snow"
-            - "springgreen"
-            - "steelblue"
-            - "tan"
-            - "teal"
-            - "thistle"
-            - "tomato"
-            - "turquoise"
-            - "violet"
-            - "wheat"
-            - "white"
-            - "whitesmoke"
-            - "yellow"
-            - "yellowgreen"
-    hs_color:
-      name: Hue/Sat color
-      description: Color for the light in hue/sat format. Hue is 0-360 and Sat is 0-100.
-      advanced: true
-      example: "[300, 70]"
-      selector:
-        object:
-    xy_color:
-      name: XY-color
-      description: Color for the light in XY-format.
-      advanced: true
-      example: "[0.52, 0.43]"
-      selector:
-        object:
-    color_temp:
-      name: Color temperature (mireds)
-      description: Color temperature for the light in mireds.
-      advanced: true
-      selector:
-        color_temp:
-    kelvin:
-      name: Color temperature (Kelvin)
-      description: Color temperature for the light in Kelvin.
-      advanced: true
-      selector:
-        number:
-          min: 2000
-          max: 6500
-          step: 100
-          unit_of_measurement: K
-    brightness:
-      name: Brightness value
-      description: Number indicating brightness, where 0 turns the light
-        off, 1 is the minimum brightness and 255 is the maximum brightness
-        supported by the light.
-      advanced: true
-      selector:
-        number:
-          min: 0
-          max: 255
-    brightness_pct:
-      name: Brightness
-      description: Number indicating percentage of full brightness, where 0
-        turns the light off, 1 is the minimum brightness and 100 is the maximum
-        brightness supported by the light.
-      selector:
-        number:
-          min: 0
-          max: 100
-          unit_of_measurement: "%"
-    profile:
-      name: Profile
-      description: Name of a light profile to use.
-      advanced: true
-      example: relax
-      selector:
-        text:
-    flash:
-      name: Flash
-      description: If the light should flash.
-      advanced: true
-      selector:
-        select:
-          options:
-            - label: "Long"
-              value: "long"
-            - label: "Short"
-              value: "short"
-    effect:
-      name: Effect
-      description: Light effect.
-      selector:
-        text:
+  fields: *turn-on-fields
+
+reload:
+  name: Reload
+  description: >
+    Updates the settings of a light only if it's already turned on.
+  target:
+    entity:
+      domain: light
+  fields: *turn-on-fields
